--- a/manifest.json
+++ b/manifest.json
@@ -18,5 +18,6 @@
       "128": "images/get_started128.png"
     }
   },
-  "manifest_version": 2
+  "manifest_version": 2,
+  "content_security_policy": "script-src 'self' https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css; object-src 'self'"
 }
