--- a/manifest.json
+++ b/manifest.json
@@ -27,5 +27,8 @@
       "128": "images/get_started128.png"
     }
   },
+  "web_accessible_resources": [
+     "corpus/*.json"
+  ],
   "manifest_version": 2
 }
