--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
       "run_at": "document_end"
     }
   ],
-  "page_action": {
+  "browser_action": {
     "default_popup": "popup.html",
     "default_icon": {
       "16": "images/get_started16.png",
