--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
   "permissions": [
     "activeTab",
     "declarativeContent",
-    "storage"
+    "storage",
+    "cookies"
   ],
   "content_scripts": [
     {
